# Motor-Intentions-Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  runtime.txt
blocks/: __init__.py  artifacts.py  envelopes.py  filters.py  generators.py  observables.py  spatial.py  transforms.py
core/: __init__.py  backend.py  types.py
eeg_io/: __init__.py  export.py
motor_intention/: __init__.py  architecture.py  configs.py  decoder_export.py  gui_app_motor.py  layouts.py  modulation.py  montages.py  projection.py  sources.py  trials.py  ui_logic.py  ui_plots.py  ui_stick_figure.py
pipeline/: __init__.py  orchestrator.py
tests/: test_motor_intention.py
