[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-motor-intention-streamlit"
version = "0.1.0"
description = "Motor-intention EEG synthesis framework with Streamlit app"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["core", "blocks", "pipeline", "eeg_io", "motor_intention"]
